Removed some Java 9 newInstance deprecation warnings.