@@ -1,10 +1,11 @@
 /*
-This file is part of the Navajo Project. 
-It is subject to the license terms in the COPYING file found in the top-level directory of this distribution and at https://www.gnu.org/licenses/agpl-3.0.txt. 
+This file is part of the Navajo Project.
+It is subject to the license terms in the COPYING file found in the top-level directory of this distribution and at https://www.gnu.org/licenses/agpl-3.0.txt.
 No part of the Navajo Project, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYING file.
 */
 package com.dexels.navajo.server.listener.http;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 
 import javax.servlet.ServletContext;
@@ -23,8 +24,7 @@ public class SchedulerTools {
 
 	private static final Logger logger = LoggerFactory.getLogger(SchedulerTools.class);
 
-	
-	@SuppressWarnings("unchecked")
+
 	public static TmlScheduler createScheduler(ServletContext context) {
 		String schedulerName = context.getInitParameter("schedulerClass");
 		if (schedulerName != null) {
@@ -36,28 +36,21 @@ public class SchedulerTools {
 					return injected;
 				}
 				logger.info("No injected scheduler found. Falling back to Class.forName");
-				Class<TmlScheduler> cc = (Class<TmlScheduler>) Class
-						.forName(schedulerName);
-				TmlScheduler scheduler = cc.newInstance();
+				Class<?> cc = Class.forName(schedulerName);
+				TmlScheduler scheduler = (TmlScheduler) cc.getDeclaredConstructor().newInstance();
 				SchedulerRegistry.setScheduler(scheduler);
 				scheduler.initialize(context);
 				logger.info("Scheduler initialized.");
 				context.setAttribute("tmlScheduler", scheduler);
 				return scheduler;
-			} catch (ClassNotFoundException e) {
+			} catch (Exception e) {
 				logger.error("Error: ", e);
-			} catch (InstantiationException e) {
-				logger.error("Error: ", e);
-			} catch (IllegalAccessException e) {
-				logger.error("Error: ", e);
-			} catch (InvalidSyntaxException e) {
-				logger.error("Error: ", e);
-			}
+            }
 		}
 		logger.info("Requested scheduler not found. Returning dummy scheduler.");
 		return new DummyScheduler();
 	}
-//	
+//
 //	public static void inject(String name, TmlScheduler ts) {
 //		injectedSchedulers.put(name, ts);
 //	}
